WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
128675
RenderNamedFlowThread should only support RenderElement children.
https://bugs.webkit.org/show_bug.cgi?id=128675
Summary
RenderNamedFlowThread should only support RenderElement children.
Andreas Kling
Reported
2014-02-12 10:30:56 PST
RenderNamedFlowThread should only support RenderElement children.
Attachments
Patch
(9.53 KB, patch)
2014-02-12 10:32 PST
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2014-02-12 10:32:12 PST
Created
attachment 223980
[details]
Patch
WebKit Commit Bot
Comment 2
2014-02-12 10:33:21 PST
Attachment 223980
[details]
did not pass style-queue: ERROR: Source/WebCore/rendering/RenderElement.cpp:36: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 3
2014-02-12 12:10:04 PST
Comment on
attachment 223980
[details]
Patch Clearing flags on attachment: 223980 Committed
r163969
: <
http://trac.webkit.org/changeset/163969
>
WebKit Commit Bot
Comment 4
2014-02-12 12:10:09 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug